--- a/playbook.yml
+++ b/playbook.yml
@@ -4,3 +4,7 @@
     - name: Print Hello World
       debug:
         msg: "Hello World"
+    - name: Create Directory
+        path: /playbookTest
+        state: directory
+        mode: "0755"
