--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,9 @@
       debug:
         msg: "Hello World"
     - name: Create Directory
+      file:
         path: /playbookTest
         state: directory
+        owner: root
+        group: root
         mode: "0755"
