--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,7 @@
       debug:
         msg: "Hello World"
     - name: Create Directory
+      become: true
       file:
         path: /playbookTest
         state: directory
