--- a/proxmoxPlaybook.yml
+++ b/proxmoxPlaybook.yml
@@ -9,13 +9,13 @@
         api_user: "{{ proxmox_api_user }}"
         api_token_id: "{{ proxmox_api_token_id }}"
         api_token_secret: "{{ proxmox_api_token_secret }}"
-        node: "omoikane"  # Proxmoxノード名
-        vmid: 100     # 仮想マシンID
+        node: "proxmox"  # Proxmoxノード名
+        vmid: 101     # 仮想マシンID
         name: "ansible-test-vm"
         cores: 2
         memory: 2048
         storage: "local-lvm"
-        disk_size: "10G"
+        disk_size: "32G"
         ostype: "l26"  # OSタイプ
         iso: "local:iso/ubuntu-24.04.1-live-server-amd64.iso"  # ISOイメージ
         net0: "model=virtio,bridge=vmbr0"
