--- a/proxmoxPlaybook.yml
+++ b/proxmoxPlaybook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create a new VM on Proxmox via API
+- name: Create a new VM on Proxmox
   hosts: localhost
   gather_facts: no
   tasks:
@@ -10,15 +10,15 @@
         headers:
           Authorization: "PVEAPIToken={{ proxmox_api_token_id }}={{ proxmox_api_token_secret }}"
         body:
-          vmid: 101                   # 仮想マシンID
-          name: "awx-test-vm"         # 仮想マシン名
-          cores: 2                    # CPUコア数
-          memory: 2048                # メモリ (MB)
-          disk: "10G"                 # ディスクサイズ
-          storage: "{{ proxmox_storage }}" # ストレージ名
-          ostype: "l26"               # OSタイプ (Linux)
-          iso: "{{ proxmox_iso }}"    # ISOイメージ
-          net0: "model=virtio,bridge=vmbr0" # ネットワーク設定
+          vmid: "{{ vmid }}"
+          name: "{{ vm_name }}"
+          cores: "{{ vm_cores }}"
+          memory: "{{ vm_memory }}"
+          disk: "{{ vm_disk_size }}"
+          storage: "{{ proxmox_storage }}"
+          ostype: "l26"
+          iso: "{{ proxmox_iso }}"
+          net0: "model=virtio,bridge=vmbr0"
         body_format: json
         status_code: 200, 400
       register: vm_creation_result
@@ -26,3 +26,4 @@
     - name: Debug VM creation result
       debug:
         var: vm_creation_result.json
+
